--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "eslint-plugin-flowtype": "^4.7.0",
     "foundation-sites": "^6.6.1",
-    "node-sass": "^4.13.1",
+    "jquery": "^3.5.1",
+    "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "what-input": "^5.2.7",
     "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
