--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "private": true,
   "proxy": "http://localhost:8000/",
   "dependencies": {
+    "@material-ui/core": "^4.9.14",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
-    "eslint-plugin-flowtype": "^4.7.0",
-    "foundation-sites": "^6.6.1",
+    "@tinymce/tinymce-react": "^3.6.0",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "tinymce": "^5.2.2",
     "what-input": "^5.2.7",
     "whatwg-fetch": "^3.0.0"
   },
@@ -38,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-flowtype": "^4.7.0"
   }
 }
