--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "@tinymce/tinymce-react": "^3.6.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "jquery": "^3.5.1",
+    "mongodb": "^3.5.7",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -24,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "npx nodemon --exec npx babel-node server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
