--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "@tinymce/tinymce-react": "^3.6.0",
+    "date-fns": "^2.14.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
+    "mime-types": "^2.1.27",
     "mongodb": "^3.5.7",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-lazyload": "^2.6.8",
+    "react-masonry-component": "^6.2.1",
+    "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "simple-react-lightbox": "^3.2.3-2",
     "tinymce": "^5.2.2",
     "what-input": "^5.2.7",
     "whatwg-fetch": "^3.0.0"
